# theball-game

./: .gitignore  .hgignore  CMakeLists.txt  README.md  debug.bat  release-src.bat  release.bat  release.lnk  todo.tdl
Release/data/gfxart/gui/: gauge.psd  horzmask.psd  listbox.psd  main.psd  msgmask.psd  vertmask.psd
Release/data/gfxart/highlighter/: redteam.psd
Release/data/gfxart/particles/: teleporter.psd
Release/data/gfxart/screffects/: dammage.psd  flash.psd
Release/data/maps/: map01.map  map02.map
Release/data/menu/: cube.blend
Release/data/models/: centerfirst.blend
Release/data/models/pack00/: blackskingrille.psd  centerblack.mtl  environement03.mtl  environementcube.mtl  mesh1.mtl  object01_02.mtl  object01_05.mtl  object01_hole.mtl  object02_01.mtl  object_grille.mtl  objectcurve_02.mtl
Release/data/models/pack00/img/: Sans titre-2.psd
Release/data/models/pack01/: blackspider01.mtl  blackspider02.mtl  centerblack2.mtl  checkercube.mtl  city_02.mtl  crystal.mtl  environement01.mtl  floor034.psd  jumpme.mtl  object02.mtl  plate01_horis.mtl  prototype.mtl  tube01.mtl
Release/data/models/players/: balle.psd  color.blend  earth.blend  orb.blend  paper.blend
Release/data/musics/: divided.flp  rider.flp  run.flp  sidebass.flp  smmoth.flp  speed.flp  zipzap.flp
Release/data/scripts/: map01.lua  map02.lua
Release/data/sfxart/powers/: gravitygun-catch.flp  gravitygun-throw.flp
artworks/: logo.psd  logo2.psd
doc/: Doxyfile  editor-man.docx  editor.docx  editor.txt  manual.docx
doc/html/: _a_i_control_8cpp.html  _a_i_control_8cpp_source.html  _a_i_control_8h.html  _a_i_control_8h_source.html  _alone_mode_ai_8cpp.html  _alone_mode_ai_8cpp_source.html  _alone_mode_ai_8h.html  _alone_mode_ai_8h_source.html  _app_manager_8cpp.html  _app_manager_8cpp_source.html  _app_manager_8h.html  _app_manager_8h_source.html  _bld_parser_8cpp.html  _bld_parser_8cpp_source.html  _bld_parser_8h.html  _bld_parser_8h_source.html  _bullet_time_8cpp.html  _bullet_time_8cpp_source.html  _bullet_time_8h.html  _bullet_time_8h_source.html  _controller_8cpp.html  _controller_8cpp_source.html  _controller_8h.html  _controller_8h_source.html  _define_8h.html  _define_8h_source.html  _dynamic_object_8cpp.html  _dynamic_object_8cpp_source.html  _dynamic_object_8h.html  _dynamic_object_8h_source.html  _editor_entity_8cpp.html  _editor_entity_8cpp_source.html  _editor_light_8cpp.html  _editor_light_8cpp_source.html  _editor_manager_8cpp.html  _editor_manager_8cpp_source.html  _editor_manager_8h.html  _editor_manager_8h_source.html  _frag_mode_ai_8cpp.html  _frag_mode_ai_8cpp_source.html  (+293 more)
docs/: compile.md  faq.md  index.md  map.md  script.collid.md  script.compute.md  script.data.md  script.hud.md  script.md  script.media.md  script.misc.md  script.player.md  script.selection.md  script.time.md  script.transform.md
icons/: icon.psd
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
scripts/: installer.bat  installer.nsi  release.bat  sources.bat
sources/: AIControl.cpp  AIControl.h  AloneModeAi.cpp  AloneModeAi.h  AppManager.cpp  AppManager.h  BldParser.cpp  BldParser.h  Boost.cpp  Boost.h  Bullet.cpp  Bullet.h  BulletTime.cpp  BulletTime.h  BulletWeapon.cpp  BulletWeapon.h  Controller.cpp  Controller.h  Define.h  DynamicObject.cpp  DynamicObject.h  EditorEntity.cpp  EditorLight.cpp  EditorManager.cpp  EditorManager.h  FragModeAi.cpp  FragModeAi.h  GameManager.cpp  GameManager.h  GravityGun.cpp  GravityGun.h  Item.cpp  Item.h  MapElement.cpp  MapElement.h  MaterialManager.cpp  MaterialManager.h  Object.cpp  Object.h  Platform.h  (+40 more)
wallpapers/: head.psd  logo.psd  logo2.psd
